<resources>
    <string name="app_name">AnimeInfo</string>
    <string name="one_piece">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4,9</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="familiarity">Similar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus egestas diam nec sapien euismod viverra. Cras elementum urna nec lorem varius, non rutrum turpis vulputate. Cras laoreet ex ut tellus bibendum scelerisque. Praesent ornare diam sed ex semper, blandit luctus ligula posuere. Sed tempus dui id aliquam malesuada. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Sed luctus nunc luctus massa commodo consequat ac a dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac velit sed eros bibendum viverra. Fusce hendrerit imperdiet urna egestas sagittis. Nulla facilisi. Quisque nec orci porta, tincidunt quam nec, rhoncus dui. Nullam varius ultricies ante, eget hendrerit neque cursus et. Sed pretium sem eu velit sodales sodales. In at lacus lorem.\n\nPellentesque eu consequat metus. Suspendisse potenti. Aliquam erat volutpat. Nam pretium, orci at rhoncus laoreet, eros eros mattis tellus, sed aliquam ex nunc ut neque. Suspendisse potenti. Duis laoreet facilisis leo, eu consequat ipsum convallis et. Suspendisse eu lorem a magna sollicitudin tempus tristique in massa. Proin eleifend erat quis faucibus mollis. Maecenas dapibus nisl et turpis lobortis, in faucibus metus scelerisque. Curabitur pretium, magna ac porta luctus, risus enim pharetra nulla, sit amet volutpat eros lectus in erat.\n\nFusce et est varius, interdum dolor eu, posuere libero. Fusce non suscipit urna. Nulla volutpat lorem id blandit cursus. Ut venenatis est pellentesque, bibendum justo ac, volutpat metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque aliquet mi velit, id venenatis velit aliquet ut. Vivamus tristique, turpis nec bibendum congue, nisl quam scelerisque sapien, sed imperdiet felis justo eu lectus. Ut at diam non sem rutrum ultricies id at orci. Vestibulum mollis odio vestibulum dui tincidunt vestibulum. Nunc gravida enim eu ligula sollicitudin, sed pellentesque dolor eleifend. Vestibulum efficitur sed felis at ornare. Maecenas massa tortor, luctus ac risus ac, euismod tincidunt turpis. Donec consequat, dui at mollis vulputate, libero nibh interdum neque, ac suscipit justo lectus nec magna.</string>
</resources>