<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="39dp"
            android:layout_height="45dp"
            android:src="@drawable/baseline_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_title"
            tools:layout_editor_absoluteY="250dp" />

        <ImageView
        android:id="@+id/img_banner"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_thumnail"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="209dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_banner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105"
            app:srcCompat="@drawable/ic_thumnail" />

        <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_piece"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_thumnail"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <Button
            android:id="@+id/btn_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/rent"
            app:layout_constraintEnd_toStartOf="@+id/btn_buy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_thumnail" />

        <Button
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="@+id/btn_rent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_rent"
        app:layout_constraintTop_toTopOf="@+id/btn_rent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rating"
        app:layout_constraintEnd_toStartOf="@+id/txt_type"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rent" />

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/txt_rating"
        app:layout_constraintEnd_toStartOf="@+id/txt_percentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_rating"
        app:layout_constraintTop_toTopOf="@+id/txt_rating" />

    <TextView
        android:id="@+id/txt_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        app:layout_constraintBottom_toBottomOf="@+id/txt_type"
        app:layout_constraintEnd_toStartOf="@+id/txt_familiarity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_type"
        app:layout_constraintTop_toTopOf="@+id/txt_type" />

    <TextView
        android:id="@+id/txt_familiarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/familiarity"
        app:layout_constraintBottom_toBottomOf="@+id/txt_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_percentage"
        app:layout_constraintTop_toTopOf="@+id/txt_percentage" />

    <TextView
        android:id="@+id/txt_lorem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/lorem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout></ScrollView>